# EnderLynx

./: .gitignore  LICENSE  README.md  api.js  credits.txt  data.json  forge.config.js  index.html  java_scan.js  launch.js  log_config.xml  main.js  package-lock.json  package.json  preload.js  script.js  servers.js  style.css  updater.js
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature_request.yml  bug_report.md  feature_request.md
.github/workflows/: build.yml
installer/: installer.nsi
lang/: en-us.json
resources/: default_skins.json
resources/ace/: ace-mode.js
resources/icons/: icon.icns
resources/lang/: en-us.json
updater/: Cargo.toml  app.rc  build.rs
updater/src/: main.rs
