[package]
name = "updater"
version = "0.7.0"
edition = "2024"

[dependencies]
anyhow = "1"
fs_extra = "1"
nix = { version = "0.28", default-features = false, features = ["signal"] }
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_UI", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_UI_Controls", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm"] }

[build-dependencies]
windres = "0.2"